--- a/src/Shared/Buttons/outlineSubmitButton.scss
+++ b/src/Shared/Buttons/outlineSubmitButton.scss
@@ -3,4 +3,7 @@
   height: 45px;
   font-size: 17px !important;
   margin-top: 20px !important;
+  &.small {
+    min-width: 150px !important;
+  }
 }
