--- a/src/Shared/Modal/modal.scss
+++ b/src/Shared/Modal/modal.scss
@@ -5,8 +5,32 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
-  background-color: $light-blue;
+
   border: 2px solid $black;
-  box-shadow: 24;
+  padding: 15px;
+  text-align: center;
+  min-height: 180px;
+  border-radius: 8px;
+  background-color: #222734;
+  color: $white;
+  &.error {
+    color: $link;
+  }
+  .modal-wrapper-buttons-row {
+    display: flex;
+    justify-content: space-between;
+  }
+  &:focus-visible {
+    outline: none;
+  }
+}
+.child-modal-wrapper {
+  width: 90%;
+  text-align: center;
+  background-color: #222734;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 15px;
 }
