--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -5,7 +5,7 @@ body {
 }
 .escape-app-main-wrapper {
   margin: 0 auto;
-  padding: 0 15px 40px;
+  padding: 15px 40px;
   min-height: 100vh; // Make sure body takes 100% of the viewport height
 
   display: flex;
@@ -14,7 +14,17 @@ body {
   color: $text;
   position: relative;
   max-width: 600px;
-
+  .border {
+    height: 1px;
+    border-bottom: 1px solid $medium-blue;
+    margin-bottom: 20px;
+  }
+  .right {
+    text-align: right;
+  }
+  .left {
+    text-align: left;
+  }
   .text {
     max-width: 600px;
     padding: 20px 15px;
@@ -25,7 +35,11 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    svg {
+      max-width: 400px;
+    }
   }
+
   .fade-out {
     opacity: 0;
     transition: opacity 5s ease;
@@ -64,4 +78,27 @@ body {
       text-align: center;
     }
   }
+}
+
+.answer-input-wrapper {
+  position: relative;
+  margin: 20px 0;
+  .right-answer-animation {
+    width: 50px;
+    position: absolute;
+    right: 5px;
+    top: 40px;
+  }
+  .clues-wrapper {
+    display: flex;
+    justify-content: end;
+    div {
+      cursor: pointer;
+      margin: 0 7px;
+    }
+  }
+}
+.poetry-puzzle-wrapper {
+  text-align: left;
+  padding: 18px;
 }
