--- a/src/Shared/Buttons/outlineSubmitButton.scss
+++ b/src/Shared/Buttons/outlineSubmitButton.scss
@@ -1,13 +1,26 @@
 .my-own-button {
   min-width: 260px !important;
   height: 45px;
-  font-size: 17px !important;
+  font-size: 15px !important;
   margin-top: 20px !important;
+  color: #55e1fb;
+  line-height: normal;
   &.small {
     min-width: 150px !important;
+    width: 150px;
+    color: #55e1fb;
+    margin-top: 10px !important;
   }
   &.extra-small {
     min-width: 10px !important;
     width: 30px;
+    color: #55e1fb;
+  }
+  &.w-100 {
+    width: 100%;
+    min-width: 100%;
+  }
+  &.mt-80 {
+    margin-top: 80px !important;
   }
 }
