--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -14,6 +14,10 @@ body {
   color: $text;
   position: relative;
   max-width: 600px;
+  // background-image: url("../../public/background/28.png");
+  // background-size: 100%;
+  // background-repeat: no-repeat;
+  // background-position-y: bottom;
   .border {
     height: 1px;
     border-bottom: 1px solid $medium-blue;
@@ -39,6 +43,20 @@ body {
       max-width: 400px;
     }
   }
+  .h-70 {
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .h-55 {
+    height: 55vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
   .fade-out {
     opacity: 0;
@@ -56,12 +74,17 @@ body {
       opacity: 1;
     }
   }
-
+  .css-1hag5lt .MuiTextField-root {
+    margin: 8px 0;
+  }
   .welcome-player-button {
     margin-top: 100px;
-    button.play {
-      display: none;
+    &.m-0 {
+      margin-top: 0;
     }
+  }
+  button.play {
+    display: none;
   }
   .welcome-start-button {
     padding-top: 20px;
@@ -80,6 +103,10 @@ body {
     }
   }
 }
+.surprise-her-wrapper {
+  display: flex;
+  align-items: center;
+}
 
 .answer-input-wrapper {
   position: relative;
@@ -87,7 +114,7 @@ body {
   .right-answer-animation {
     width: 50px;
     position: absolute;
-    right: 40px;
+    right: 5px;
     top: 40px;
   }
   .clues-wrapper {
@@ -103,6 +130,8 @@ body {
   }
   .answer-form {
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
   }
 }
 .puzzle-wrapper {
@@ -134,5 +163,10 @@ body {
 
   .MuiInputLabel-root {
     color: #55e1fb !important;
+  }
+  .puzzle-item-bottom-button {
+    .my-own-button {
+      width: 100% !important;
+    }
   }
 }
