--- a/src/Shared/Modal/modal.scss
+++ b/src/Shared/Modal/modal.scss
@@ -18,7 +18,7 @@
   }
   .modal-wrapper-buttons-row {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   &:focus-visible {
     outline: none;
